# bakalarska_praca_ros2

./: .gitignore  .gitignorey  ros2.sh
ros2_ws/: frames_2025-04-09_19.23.23.gv
ros2_ws/my_venv/: pyvenv.cfg
ros2_ws/python-libs/Cython-3.0.12.dist-info/: RECORD
ros2_ws/python-libs/action_tutorials_interfaces/: _action_tutorials_interfaces_s.ep.rosidl_typesupport_c.c  _action_tutorials_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c
ros2_ws/python-libs/action_tutorials_interfaces-0.33.5-py3.12.egg-info/: PKG-INFO
ros2_ws/python-libs/actuator_msgs-0.0.1-py3.12.egg-info/: PKG-INFO  SOURCES.txt
ros2_ws/python-libs/angles-1.16.0-py3.12.egg-info/: PKG-INFO
ros2_ws/python-libs/builtin_interfaces-2.0.2-py3.12.egg-info/: PKG-INFO
ros2_ws/python-libs/camera_calibration-5.0.5.egg-info/: PKG-INFO  entry_points.txt
ros2_ws/src/color_ball_tracking/: CMakeLists.txt  package.xml
ros2_ws/src/color_ball_tracking/install/: local_setup.sh  setup.sh
ros2_ws/src/color_ball_tracking/install/color_ball_tracking/share/color_ball_tracking/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/color_ball_tracking/launch/: color_ball_tracking_launch.py
ros2_ws/src/color_ball_tracking/log/: latest_build
ros2_ws/src/color_ball_tracking/models/: world.sdf
ros2_ws/src/color_ball_tracking/models/color_ball/: model.config  model.sdf
ros2_ws/src/color_ball_tracking/models/wave_rover_4wd/: model.config  model.sdf
ros2_ws/src/color_ball_tracking/src/: color_ball_tracker.py  move_ball.py
ros2_ws/src/opencv_tutorials/: package.xml  (+1 more)
(+276 files in other folders)
